code/apps/dashboard/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: default
  labels:
    app: dashboard
spec:
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        # image: uasbase2.pmel.noaa.gov:448/test/dashboard@sha256:1efee0c698b3037b822d00237114e25aacad59942c9dd9199168cc2631143d8d
        image: 776103873773.dkr.ecr.us-east-1.amazonaws.com/iot-daq/dashboard:v1.0.3
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        ports:
        - name: http
          # containerPort: 8000
          containerPort: 8080
          protocol: TCP
      #   volumeMounts:
      #     - name: erddap-datasetd-storage
      #       mountPath: /datasets.d
      #       # subPath: datasets.d
      #     - name: erddap-content-storage
      #       mountPath: /usr/local/tomcat/content/erddap
      #       # subPath: erddap
      #     - name: erddap-data-pv-storage
      #       mountPath: /erddapData
      #       # subPath: erddapData
      # volumes:
      #   - name: erddap-datasetd-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-datasetsd-pvc
      #   - name: erddap-content-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-content-pvc
      #   - name: erddap-data-pv-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-data-pvc
---
# apiVersion: serving.knative.dev/v1
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: default
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
  - name: http
    protocol: TCP
    # port: 8000
    port: 80
    # targetPort: 8000
    targetPort: 8080
  type: ClusterIP
